--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 ##########################
+# Folders
+##########################
+archive/
+
+##########################
 # System files
 ##########################
 .DS_Store
